syntax = "proto3";

package hapiio;

option go_package = "./;pb";

message Provider {
    repeated string scopes =1;
    string client_id =2;
    string client_secret = 3;
    string redirect_url = 4;
    string auth_url = 5;
    string token_url = 6;
    string user_api_url = 7;
}
